--- a/TrueDogStore/appsettings.json
+++ b/TrueDogStore/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=playground\\SQLEXPRESS;Initial Catalog=TrueDogStore;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"  
+    "DefaultConnection": "Data Source=playground\\SQLEXPRESS;Initial Catalog=TrueDogStore;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dmmy4w8ev",
+    "ApiKey": "885212534537264",
+    "ApiSecret": "0PRHUfqBe2vESMZtvkme_ylA0SY"
   },
   "Logging": {
     "LogLevel": {
