--- a/TrueDogStore/appsettings.json
+++ b/TrueDogStore/appsettings.json
@@ -1,18 +1,24 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=playground\\SQLEXPRESS;Initial Catalog=TrueDogStore;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": ""
   },
 
   "CloudinarySettings": {
-    "CloudName": "dmmy4w8ev",
-    "ApiKey": "885212534537264",
-    "ApiSecret": "0PRHUfqBe2vESMZtvkme_ylA0SY"
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "Authentication": {
+      "Google": {
+        "ClientId": "",
+        "ClientSecret": ""
+      }
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
