--- a/TrueDogStore/Properties/launchSettings.json
+++ b/TrueDogStore/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://PLAYGROUND:7006;http://PLAYGROUND:5096"
+      "applicationUrl": "https://localhost:7006;http://localhost:5096"
     },
     "IIS Express": {
       "commandName": "IISExpress",
